2010-03-13 Eric Wasylishen <ewasylishen@gmail.com>

	* Source/win32/w32_GLcontext.m: Set the WS_DISABLED flag
	on the OpenGL subwindow so mouse/keyboard events get
	redirected to the parent window.
	Previously mouse/keyboard events were being eaten by
	the OpenGL subwindow - now they work as expected.

2010-03-13 Eric Wasylishen <ewasylishen@gmail.com>

	* Source/win32/w32_GLcontext.m:
	Make more than one NSOpenGLView in an application work.

	Win32GLContext was using the hDC stored in the pixel format
	object in a few places, instead of getting it from the
	Win32Subwindow object. 

2010-03-13 Eric Wasylishen <ewasylishen@gmail.com>

	* Headers/win32/WIN32Server.h: 
	* Source/win32/WIN32Server.m: Add support for horizontal 
	mousewheel scrolling

010-03-13 Eric Wasylishen <ewasylishen@gmail.com>

	* Source/win32/WIN32Server.m: Fix handling of mousewheel events.
	The WM_MOUSEWHEEL message uses screen coordinates, so convert
	them to client coordinates. 

2010-03-13 Fred Kiefer <FredKiefer@gmx.de>

	* Source/gsc/GSContext.m (-GSDrawImage::): 
	Bug fix by Anibal Rindisbacher <anibal784@gmail.com>

2010-03-12 Doug Simons <doug.simons@testplant.com>

	* Source/win32/WIN32Server.m: Capture the mouse to get mouse
	moved events outside of a window while a button is down.

2010-03-11 Doug Simons <doug.simons@testplant.com>

	* Source/win32/WIN32Server.m: Prevent generating spurious
	NSMouseMoved events when the mouse hasn't actually moved.

2010-03-08 Doug Simons <doug.simons@testplant.com>

	* Source/win32/WIN32Server.m: Oops, I don't know how the
	extra 'u' got in there... fixed.

2010-03-08 Doug Simons <doug.simons@testplant.com>

	* Source/win32/WIN32Server.m: When the shift key is down,
	charactersIgnoringModifiers should be uppercase (this is
	consistent with Cocoa and the x11 backend.

2010-03-07 Fred Kiefer <FredKiefer@gmx.de>

	* Source/cairo/CairoGState.m: Only use calls for
	cairo_pattern_set_extend() on cairo > 1.6.0.